--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
 	
+	// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+	testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+
+	
+	
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
